Wrap .clickable in media query to prevent centering of...
hamburger menu button

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -202,8 +202,10 @@
     display:none
 }
 
-.clickable {
-  pointer-events: auto;
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (min-width: 992px) {
+  .clickable {
+    pointer-events: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
